Populating the Menu screen, Creating the Music screen and Querying the Giphy API

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
         </form>
       </fieldset>
     </div>
-
-    <!-- TODO(you): Add the HTML necessary to complete the assignment! -->
+    <div id = "audio-player" class = "inactive">
+      <section class = "gif"></section>
+      <footer class = "footer">
+        <img class="button play" src = "images/play.png">
+        <img class="button pause inactive" src = "images/pause.png">
+      </footer>
+    </div>
 
   </body>
 </html>
