Milestone D: Audio playback and PlayButton

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <div id = "audio-player" class = "inactive">
       <section class = "gif"></section>
       <footer class = "footer">
-        <img class="button play" src = "images/play.png">
-        <img class="button pause inactive" src = "images/pause.png">
+        <img class="button" src = "images/pause.png">
       </footer>
     </div>
 
