Optimization for a better user experience. Double buffering

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       </fieldset>
     </div>
     <div id = "audio-player" class = "inactive">
-      <section class = "gif"></section>
+      <div class = "container">
+      <div class = "gif first show"></div>
+      <div class = "gif second"></div>
+      </div>
       <footer class = "footer">
         <img class="button" src = "images/pause.png">
       </footer>
