Fixed play/stop button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class = "gif second"></div>
       </div>
       <footer class = "footer">
-        <img class="button" src = "images/pause.png">
+        <div class="button pause"></div>
       </footer>
     </div>
 
